<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Yellow"
        tools:context=".SettingsFragment">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/settings"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="408dp"
            android:layout_height="235dp"
            android:src="@drawable/bulls_and_cows"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/difficult"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="142dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintVertical_bias="0.294">

            <RadioButton
                android:id="@+id/radioNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/IndianRed"
                android:checked="true"
                android:minHeight="48dp"
                android:text="@string/normal"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/normal_text"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/radioHard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/IndianRed"
                android:minHeight="48dp"
                android:text="@string/hard"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hard_text"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/radioInsane"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/IndianRed"
                android:minHeight="48dp"
                android:text="@string/insane"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insane_text"
                android:textColor="#000000" />
        </RadioGroup>

        <Button
            android:id="@+id/confirm"
            android:layout_width="150dp"
            android:layout_height="52dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/border_button"
            android:text="@string/confirm"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>